Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-115241

Android Deploy Qt tool does not copy templates and libc++_shared library in aux mode

XMLWordPrintable

    • Android
    • 1e7fa7dbe (dev)
    • 2023wk40FOQtforAndroid, 2023wk42FOQtforAndroid

      Steps to reproduce

      Run the androiddeployqt tool from the command line with the flag --aux-mode

      Expected Result

      The androiddeployqt copies the dependencies and templates

      Observed Result

      All dependencies except the libc++_shared.so library were being copied. Also, the templates were not copied, instead it throws an error:

      Cannot find <Path to Project>/build/android-build//res/values/libs.xml in prepared packaged. This file is required.
      

      Workaround

      Copy the libc++_shared.so from the llvm toolchain and the templates manually and then run the androiddeployqt tool. It works as expected.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            nikunj Nikunj Arora
            nikunj Nikunj Arora
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes